--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@handsontable/react": "^14.4.0",
     "electron-squirrel-startup": "^1.0.1",
+    "handsontable": "^14.4.0",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "rollup-plugin-postcss": "^4.0.2"
   }
 }
