added test esp32 to log data

--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   "license": "MIT",
   "dependencies": {
     "@handsontable/react": "^14.4.0",
+    "cors": "^2.8.5",
     "electron-squirrel-startup": "^1.0.1",
+    "express": "^5.1.0",
     "handsontable": "^14.4.0",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
