--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@handsontable/react": "^14.4.0",
     "cors": "^2.8.5",
     "electron-squirrel-startup": "^1.0.1",
+    "electron-updater": "^6.6.2",
     "express": "^5.1.0",
     "handsontable": "^14.4.0",
     "lucide-react": "^0.408.0",
