--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/express": "^5.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.19",
@@ -57,6 +58,7 @@
     "react-router-dom": "^6.24.1",
     "rollup-plugin-postcss": "^4.0.2",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "ws": "^8.18.3"
   }
 }
