--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "xlsx": "^0.18.5"
   }
 }
