--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "handsontable": "^14.4.0",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "rollup-plugin-postcss": "^4.0.2",
