--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "clean": "rm -rf node_modules dist out .vite && npm install",
+    "parse:fabrics": "tsx ./parse-xlsx-fabrics.js"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
@@ -26,7 +28,9 @@
     "@types/express": "^5.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sqlite3": "^5.1.0",
     "@types/ws": "^8.18.1",
+    "@types/xlsx": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.19",
@@ -36,6 +40,7 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "~4.5.4",
     "vite": "^5.3.3"
   },
@@ -51,7 +56,6 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-updater": "^6.6.2",
     "express": "^5.1.0",
-    "handsontable": "^14.4.0",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
