--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.19",
     "electron": "31.2.0",
+    "electron-react-devtools": "^0.5.3",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "postcss": "^8.4.39",
@@ -53,6 +54,7 @@
   "dependencies": {
     "@handsontable/react": "^14.4.0",
     "cors": "^2.8.5",
+    "electron-devtools-installer": "^4.0.0",
     "electron-squirrel-startup": "^1.0.1",
     "electron-updater": "^6.6.2",
     "express": "^5.1.0",
