--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "plugin-react": "^0.0.1-security",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "recharts": "^3.1.2",
     "rollup-plugin-postcss": "^4.0.2",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
